# qt-3d-slicer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  FEATURE_SUMMARY.md  IMPLEMENTATION_NOTES.md  LICENSE  README.md
.cursor/plans/: qt-portfolio-project-hardening_802d447a.plan.md
.github/workflows/: build.yml  windows-msvc.yml
_codeql_build_dir/src/: MyQtApp
_codeql_build_dir/src/MyQtApp_autogen/: deps
_codeql_build_dir/src/core/core_lib_autogen/: deps
_codeql_build_dir/src/core/slicing/core_slicing_autogen/: deps
_codeql_build_dir/src/io/models/3mf/model_io_3mf_autogen/: deps
_codeql_build_dir/src/io/models/common/model_io_common_autogen/: deps
_codeql_build_dir/src/io/models/stl/model_io_stl_autogen/: deps
_codeql_build_dir/src/rendering/rendering_lib_autogen/: deps  mocs_compilation.cpp
_codeql_build_dir/src/rendering/rendering_lib_autogen/EWIEGA46WW/: moc_MeshRenderer.cpp.d
_codeql_build_dir/src/ui/ui_lib_autogen/: deps  mocs_compilation.cpp
_codeql_build_dir/src/ui/ui_lib_autogen/EWIEGA46WW/: moc_FilePreviewDialog.cpp.d  moc_mainwindow.cpp.d
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/buildplate/: BuildPlate.h  CMakeLists.txt  CircularPlate.cpp  CircularPlate.h  RectangularPlate.cpp  RectangularPlate.h
src/core/geometry/: aabb.h  triangle.h  vec3.h
src/core/mesh/: MeshAnalyzer.cpp  MeshAnalyzer.h  MeshRepairer.cpp  MeshRepairer.h  MeshValidator.cpp  MeshValidator.h  NormalProcessor.cpp  NormalProcessor.h  mesh.cpp  mesh.h
src/core/slicing/: CMakeLists.txt  Layer.h  LineSegment.h  Slicer.h  SlicingConstants.h  ZIndexedMesh.cpp  ZIndexedMesh.h  slicer.cpp
src/io/: CMakeLists.txt  readme.md  stlreader.cpp  stlreader.h
src/io/STL/: CMakeLists.txt  stl_reader.cpp  stl_reader.h
src/io/loading/: AsyncLoadingStrategy.cpp  AsyncLoadingStrategy.h  CMakeLists.txt  CachedLoadingStrategy.cpp  CachedLoadingStrategy.h  ILoadingStrategy.h  SyncLoadingStrategy.cpp  SyncLoadingStrategy.h
src/io/loading/cache/: MeshCache.cpp  MeshCache.h
src/io/models/: CMakeLists.txt
src/io/models/3mf/: CMakeLists.txt  ThreemfReader.cpp  ThreemfReader.h
src/io/models/common/: CMakeLists.txt  IModelReader.h  ModelFactory.cpp  ModelFactory.h
src/io/models/stl/: CMakeLists.txt  StlReader.cpp  StlReader.h  stl_reader.cpp  stl_reader.h
src/rendering/: CMakeLists.txt  Camera.cpp  Camera.h  MeshRenderer.cpp  MeshRenderer.h  TransformGizmo.cpp  TransformGizmo.h
src/ui/: CMakeLists.txt  FilePreviewDialog.cpp  FilePreviewDialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/widgets/: BuildPlatePanel.cpp  BuildPlatePanel.h
